# mpu_6050_driver

./: package.xml  setup.py
scripts/: imu_node.py
src/mpu_6050_driver/: registers.py
